Add vision injection to CLI
I added a new Soar CLI command `svs vsm.inject` which allows a base64-encoded image to be injected into an agent's visual sensory memory.

--- a/Core/SVS/SConscript
+++ b/Core/SVS/SConscript
@@ -76,8 +76,8 @@ Import('env', 'compiler', 'lsb_build')
 svs_env = env.Clone()
 svs_env['LIBS'] = []
 
-srcdirs = ['src', 'src/filters', 'src/commands', 'src/models']
-incdirs = [env.Dir(d).srcnode() for d in 'src src/models eigen ccd'.split()]
+srcdirs = ['src', 'src/filters', 'src/commands', 'src/models', 'base64']
+incdirs = [env.Dir(d).srcnode() for d in 'src src/models eigen ccd base64'.split()]
 scu_src = ['SVS.cxx']
 
 if compiler == 'g++':
