--- a/Core/SVS/SConscript
+++ b/Core/SVS/SConscript
@@ -76,8 +76,8 @@ Import('env', 'compiler', 'lsb_build')
 svs_env = env.Clone()
 svs_env['LIBS'] = []
 
-srcdirs = ['src', 'src/filters', 'src/commands', 'src/models', 'base64', 'src/spatial_scene', 'src/vltm', 'src/vwm']
-incdirs = [env.Dir(d).srcnode() for d in 'src src/spatial_scene src/vltm src/vwm src/models eigen ccd base64'.split()]
+srcdirs = ['src', 'src/filters', 'src/commands', 'src/models', 'base64', 'src/spatial_scene', 'src/vltm', 'src/vwm', 'src/neural_network']
+incdirs = [env.Dir(d).srcnode() for d in 'src src/spatial_scene src/vltm src/vwm src/models eigen ccd base64 src/neural_network'.split()]
 scu_src = ['SVS.cxx']
 
 if compiler == 'g++':
