--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,4 +104,5 @@
     },
     "python.formatting.provider": "none",
     "C_Cpp.errorSquiggles": "disabled",
+    "C_Cpp.dimInactiveRegions": false,
 }
